Add desktop styles

--- a/templates/article.html
+++ b/templates/article.html
@@ -95,6 +95,13 @@
     .green-demo {
       color: #129490;
     }
+
+    @media only screen and (min-width: 768px) {
+      .container {
+        width: 700px;
+        margin: 0 auto;
+      }
+    }
   </style>
 </head>
 <body>
