--- a/templates/index.html
+++ b/templates/index.html
@@ -65,12 +65,19 @@
 
     .article-list-box hr {
       display: block;
-      width: 30%;
+      width: 100px;
       height: 1px;
       border: 0;
       border-top: 2px solid #31393c;
       margin: 1em auto;
       padding: 0;
+    }
+
+    @media only screen and (min-width: 768px) {
+      .container {
+        width: 700px;
+        margin: 0 auto;
+      }
     }
   </style>
 </head>
