<pre> should overflow-x auto

--- a/templates/article.html
+++ b/templates/article.html
@@ -58,7 +58,7 @@
       -webkit-hyphens: auto;
       hyphens: auto;
 
-      overflow-x: scroll;
+      overflow-x: auto;
       -webkit-overflow-scrolling: touch;
     }
 
