Update article <pre> styles

--- a/templates/article.html
+++ b/templates/article.html
@@ -60,6 +60,9 @@
 
       overflow-x: auto;
       -webkit-overflow-scrolling: touch;
+
+      padding: 10px;
+      background-color: #EDEDED;
     }
 
     .container {
